--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             <h1>numeros positivos y negativos </h1>
             <h3>Ingrese el numero:</h3>
             <form id="formulario" class="formulario">
-                <input name="num" id="num" type="text" pattern="^[(-9)-9]+" title="Solo numeros" placeholder="ingrese un numero" autocomplete="off" class="input-number">
+                <input name="num" id="num1" type="text" pattern="^[(-9)-9]+" title="Solo numeros" placeholder="ingrese un numero" autocomplete="off" class="input-number">
+
+                <input name="num" id="num2" type="text" pattern="^[(-9)-9]+" title="Solo numeros" placeholder="ingrese un numero" autocomplete="off" class="input-number">
+
+                <input name="num" id="num3" type="text" pattern="^[(-9)-9]+" title="Solo numeros" placeholder="ingrese un numero" autocomplete="off" class="input-number">
                 <h3 id="res"></h3>
                 <button type="submit" id="btn" class="btn">confirmar</button>
             </form>
