--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>numero mayor y menor </h1>
-            <h3>Ingrese el numero:</h3>
+            <h1>Calcular area</h1>
+            <h3>Ingrese la letra triangulo(t) - circulo(c) :</h3>
             <form id="formulario" class="formulario">
-                <input name="num" id="num1" type="text" pattern="^[(-9)-9]+" title="Solo numeros" placeholder="ingrese un numero" autocomplete="off" class="input-number">
 
-                <input name="num" id="num2" type="text" pattern="^[(-9)-9]+" title="Solo numeros" placeholder="ingrese un numero" autocomplete="off" class="input-number">
+                <input name="num" id="num1" type="text" placeholder="ingrese la letra"class="input-number">
 
-                <input name="num" id="num3" type="text" pattern="^[(-9)-9]+" title="Solo numeros" placeholder="ingrese un numero" autocomplete="off" class="input-number">
                 <h3 id="res1"></h3>
-                <h3 id="res2"></h3>
+
                 <button type="submit" id="btn" class="btn">confirmar</button>
+
             </form>
             
         </div>
