--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>Calcular area</h1>
-            <h3>Ingrese la letra triangulo(t) - circulo(c) :</h3>
+            <h1>Area del rectangulo</h1>
+            <h3>Ingrese los lados (positivos) :</h3>
             <form id="formulario" class="formulario">
 
-                <input name="num" id="num1" type="text" placeholder="ingrese la letra"class="input-number">
+                <input name="num" id="num1" type="text" placeholder="lado 1"class="input-number">
+
+                <input name="num" id="num2" type="text" placeholder="lado 2"class="input-number">
 
                 <h3 id="res1"></h3>
 
