--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>Area del rectangulo</h1>
-            <h3>Ingrese los lados (positivos) :</h3>
+            <h1>Temperatura y presion</h1>
             <form id="formulario" class="formulario">
 
-                <input name="num" id="num1" type="text" placeholder="lado 1"class="input-number">
+                <input name="num" id="num1" type="text" placeholder="temperatura"class="input-number">
 
-                <input name="num" id="num2" type="text" placeholder="lado 2"class="input-number">
+                <input name="num" id="num2" type="text" placeholder="presion"class="input-number">
 
                 <h3 id="res1"></h3>
 
