--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>Temperatura y presion</h1>
+            <h1>RESTARUARNT</h1>
+            <h3>ingrese el valor a pagar:</h3>
             <form id="formulario" class="formulario">
 
-                <input name="num" id="num1" type="text" placeholder="temperatura"class="input-number">
-
-                <input name="num" id="num2" type="text" placeholder="presion"class="input-number">
+                <input name="num" id="num1" type="text" placeholder="ingrese el pago....."class="input-number">
 
                 <h3 id="res1"></h3>
+                <h3 id="res2"></h3>
 
                 <button type="submit" id="btn" class="btn">confirmar</button>
 
