--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>RESTARUARNT</h1>
-            <h3>ingrese el valor a pagar:</h3>
+            <h1>Pago Empresa</h1>
+            <h3>en que parte trabaja: administrativa(a-A) palnta(p-P) </h3>
             <form id="formulario" class="formulario">
 
-                <input name="num" id="num1" type="text" placeholder="ingrese el pago....."class="input-number">
+                <input name="num" id="num1" type="text" placeholder="ingrese su trabajo"class="input-number">
+
+                <input name="num" id="num2" type="text" placeholder="horas trabajadas"class="input-number">
 
                 <h3 id="res1"></h3>
                 <h3 id="res2"></h3>
