--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>Pago Empresa</h1>
-            <h3>en que parte trabaja: administrativa(a-A) palnta(p-P) </h3>
+            <h1>Suma y Producto</h1>
+            <h3></h3>
             <form id="formulario" class="formulario">
 
-                <input name="num" id="num1" type="text" placeholder="ingrese su trabajo"class="input-number">
+                <input name="num" id="num1" type="text" placeholder="numero 1"class="input-number">
 
-                <input name="num" id="num2" type="text" placeholder="horas trabajadas"class="input-number">
+                <input name="num" id="num2" type="text" placeholder="numero 2"class="input-number">
+                
+                <input name="num" id="num3" type="text" placeholder="numero 3"class="input-number">
+
+                <input name="num" id="num4" type="text" placeholder="numero 4"class="input-number">
 
                 <h3 id="res1"></h3>
                 <h3 id="res2"></h3>
