--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="esp">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,22 +11,15 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>Suma y Producto</h1>
+            <h1>IVA de productos</h1>
             <h3></h3>
             <form id="formulario" class="formulario">
 
-                <input name="num" id="num1" type="text" placeholder="numero 1"class="input-number">
-
-                <input name="num" id="num2" type="text" placeholder="numero 2"class="input-number">
-                
-                <input name="num" id="num3" type="text" placeholder="numero 3"class="input-number">
-
-                <input name="num" id="num4" type="text" placeholder="numero 4"class="input-number">
 
                 <h3 id="res1"></h3>
                 <h3 id="res2"></h3>
 
-                <button type="submit" id="btn" class="btn">confirmar</button>
+                <button type="submit" id="btn" class="btn">comenzar</button>
 
             </form>
             
