--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>IVA de productos</h1>
+            <h1>Promedio de 5 estudiantes</h1>
             <h3></h3>
             <form id="formulario" class="formulario">
+                <input name="num" id="num1" type="text" placeholder="nota del 1er estudiante
+                "class="input-number">
 
+                <input name="num" id="num2" type="text" placeholder="nota del 2do estudiante
+                "class="input-number">
+
+                <input name="num" id="num3" type="text" placeholder="nota del 3er estudiante
+                "class="input-number">
+
+                <input name="num" id="num4" type="text" placeholder="nota del 4to estudiante
+                "class="input-number">
+
+                <input name="num" id="num5" type="text" placeholder="nota del 5to estudiante
+                "class="input-number">
 
                 <h3 id="res1"></h3>
                 <h3 id="res2"></h3>
