--- a/index.html
+++ b/index.html
@@ -11,26 +11,17 @@
 
     <div class="form">
         <div class="form-content">
-            <h1>Promedio de 5 estudiantes</h1>
-            <h3></h3>
+            <h1>Resta de  2 numeros</h1>
+            <h3>ingrese los datos correspondientes:</h3>
             <form id="formulario" class="formulario">
-                <input name="num" id="num1" type="text" placeholder="nota del 1er estudiante
+                <input name="num" id="num1" type="text" placeholder="ingrese el 1er numero
                 "class="input-number">
 
-                <input name="num" id="num2" type="text" placeholder="nota del 2do estudiante
+                <input name="num" id="num2" type="text" placeholder="ingrese el 2do numero
                 "class="input-number">
 
-                <input name="num" id="num3" type="text" placeholder="nota del 3er estudiante
-                "class="input-number">
-
-                <input name="num" id="num4" type="text" placeholder="nota del 4to estudiante
-                "class="input-number">
-
-                <input name="num" id="num5" type="text" placeholder="nota del 5to estudiante
-                "class="input-number">
 
                 <h3 id="res1"></h3>
-                <h3 id="res2"></h3>
 
                 <button type="submit" id="btn" class="btn">comenzar</button>
 
