--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
     <div class="form">
         <div class="form-content">
             <h1>Resta de  2 numeros</h1>
-            <h3>ingrese los datos correspondientes:</h3>
+            <h3>que tipo de menbresia utiliza(a, b, c)</h3>
             <form id="formulario" class="formulario">
-                <input name="num" id="num1" type="text" placeholder="ingrese el 1er numero
+                
+                <input name="num" id="num1" type="text" placeholder="ingrese la letra
                 "class="input-number">
-
-                <input name="num" id="num2" type="text" placeholder="ingrese el 2do numero
-                "class="input-number">
-
 
                 <h3 id="res1"></h3>
 
